# des-implementation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
inc/: des_decrypt.h  des_encrypt.h  feistel.h  gendefs.h  key_schedule.h  main.h  permutation.h  substitute.h  utils.h
src/: des_decrypt.c  des_encrypt.c  feistel.c  key_schedule.c  main.c  permutation.c  substitute.c  utils.c
